--- a/example/mongodb.template
+++ b/example/mongodb.template
@@ -49,6 +49,7 @@ resources:
         EOF
         yum -y install mongo-10gen mongo-10gen-server
         service mongod start
+        /sbin/iptables -I INPUT -p tcp --dport 27017 -j ACCEPT
 
 outputs:
 
