--- a/example/mongodb.template
+++ b/example/mongodb.template
@@ -50,6 +50,7 @@ resources:
         yum -y install mongo-10gen mongo-10gen-server
         service mongod start
         /sbin/iptables -I INPUT -p tcp --dport 27017 -j ACCEPT
+        service iptables save
 
 outputs:
 
